# vpn-client

./: README.md  package.json  pnpm-lock.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  AppContext.tsx  AppProvider.tsx  atoms.ts  hooks.ts  utils.ts
frontend/src/components/: AppBar.tsx  Menu.tsx  SettingsEditor.tsx  StartVpnButton.tsx  StopVpnButton.tsx  VpnEditor.tsx
frontend/src/pages/: AddVpn.tsx  Main.tsx
frontend/src/pages/Main/: MyNavbar.tsx  View.tsx
frontend/src/pages/Main/View/: Home.tsx  VpnView.tsx
frontend/src/rspc/: bindings.ts
frontend/src/utils/: parseConfig.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  rspc_layer.rs  vpn_manager.rs
src-tauri/src/config/: app.rs  vpn.rs
src-tauri/src/router/: app.rs  config.rs  mod.rs  vpn.rs
