[package]
name = "vpn-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rspc = { version = "0.1.2", features = ["tauri"] }
tokio = { version = "1" }
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
ron = "0.8"
once_cell = "1.17.1"
anyhow = "1.0.70"
async-stream = "0.3.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
